# budget-maker-desktop

./: .gitignore  LICENSE  README.md  budget-maker-desktop.spec  build.spec  local_build.ps1  pyproject.toml  updater.spec
.github/workflows/: python-app.yml
docs/: MVP.md  design.excalidraw  diagram.md
scripts/: build_rcc.ps1
src/: config.py  environment.py  logger.py  main.py  resources.qrc  resources_rc.py  updater.py  user_config.py  utils.py
src/controllers/: about.py  home.py  new_project.py  products.py  projects.py  settings.py
src/forms/: new_project.py
src/models/: database.py  products.py  project_products.py  projects.py
src/qss/templates/: dark.qss.tpl  light.qss.tpl
src/ui/: MainWindow.ui  MainWindow_ui.py  NewProject.ui  NewProject_ui.py  colors.py  config.py  sizes.py
src/views/: resources_rc.py
src/views/forms/: new_project.py
src/views/html/templates/: formal-azul.html.tpl  formal-negro.html.tpl  formal-verde.html.tpl
src/views/pages/: products.py  projects.py
src/views/qss/templates/: dark.qss.tpl  light.qss.tpl
src/views/ui/: About.ui  About_ui.py  Home.ui  Home_ui.py  MainWindow.ui  MainWindow_ui.py  NewProject.ui  NewProjectTemplate.ui  NewProjectTemplate_ui.py  NewProject_ui.py  Preview.ui  Preview_ui.py  Product.ui  Product_ui.py  Products.ui  Products_ui.py  Project.ui  ProjectProduct.ui  ProjectProduct_ui.py  Project_ui.py  Projects.ui  Projects_ui.py  Settings.ui  Settings_ui.py  Success.ui  Success_ui.py  colors.py  sizes.py
