[tool.poetry]
name = "budget-maker-desktop"
version = "0.1.0"
description = ""
authors = ["4l3j0Ok <alejofsarmiento@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyside6 = "^6.8.0.2"
qdarkstyle = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
